compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__functions__function_as_value.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/functions.rs
assertion_line: 5
expression: "\nfn other() {\n  Nil\n}\n\npub fn main() {\n  other\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

fn other() {
  Nil
}

pub fn main() {
  other
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec other() -> nil.
other() ->
    nil.

-file("project/test/my/mod.gleam", 6).
-spec main() -> fun(() -> nil).
main() ->
    fun other/0.
