compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__functions__function_called.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/functions.rs
assertion_line: 62
expression: "\npub fn main() {\n  main()\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  main()
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 2).
-spec main() -> any().
main() ->
    main().
