compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__functions__labelled_argument_ordering.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/functions.rs
assertion_line: 116
expression: "\ntype A { A }\ntype B { B }\ntype C { C }\ntype D { D }\n\nfn wibble(a a: A, b b: B, c c: C, d d: D) {\n  Nil\n}\n\npub fn main() {\n  wibble(A, C, D, b: B)\n  wibble(A, C, D, b: B)\n  wibble(B, C, D, a: A)\n  wibble(B, C, a: A, d: D)\n  wibble(B, C, d: D, a: A)\n  wibble(B, D, a: A, c: C)\n  wibble(B, D, c: C, a: A)\n  wibble(C, D, b: B, a: A)\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

type A { A }
type B { B }
type C { C }
type D { D }

fn wibble(a a: A, b b: B, c c: C, d d: D) {
  Nil
}

pub fn main() {
  wibble(A, C, D, b: B)
  wibble(A, C, D, b: B)
  wibble(B, C, D, a: A)
  wibble(B, C, a: A, d: D)
  wibble(B, C, d: D, a: A)
  wibble(B, D, a: A, c: C)
  wibble(B, D, c: C, a: A)
  wibble(C, D, b: B, a: A)
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).
-export_type([a/0, b/0, c/0, d/0]).

-type a() :: a.

-type b() :: b.

-type c() :: c.

-type d() :: d.

-file("project/test/my/mod.gleam", 7).
-spec wibble(a(), b(), c(), d()) -> nil.
wibble(A, B, C, D) ->
    nil.

-file("project/test/my/mod.gleam", 11).
-spec main() -> nil.
main() ->
    wibble(a, b, c, d),
    wibble(a, b, c, d),
    wibble(a, b, c, d),
    wibble(a, b, c, d),
    wibble(a, b, c, d),
    wibble(a, b, c, d),
    wibble(a, b, c, d),
    wibble(a, b, c, d).
