compiler-core/main/__generate/erlang/tests/snapshots/gleam_core____generate__erlang__tests__functions__nested_imported_function_called.snap
---
source: compiler-core/src_refactored/__generate/erlang/tests/functions.rs
assertion_line: 73
expression: "\nimport some/other\n\npub fn main() {\n  other.wibble()\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

import some/other

pub fn main() {
  other.wibble()
}


----- COMPILED ERLANG
-module(my@mod).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch, inline]).
-define(FILEPATH, "project/test/my/mod.gleam").
-export([main/0]).

-file("project/test/my/mod.gleam", 4).
-spec main() -> nil.
main() ->
    some@other:wibble().
